# sparkhalos

./: README.md  _readmelogs.md  cic_part_by_part.py  count_cell.py  fieldcic.py  fieldcicall.py  fitfunplot.py  fitfunplt.ipynb  hmf.py  localfiles.py  main.ipynb  pyproject.toml  readdata.py  requirments.txt
CIC of field particles/: cic.py  cic_calc.py  fieldcicall.py  fitfunplot.py
CIC_Particles/: fitfunplot.py
CIC_Test/: fieldcic.py  fitfunplot.py  test.py
P_N_CIC/: fitfunplot.py
P_N_M_CIC/: fitfunplot.py
main/: cic_part_by_part.py  halocic.py  testdata.py
pnm_cic_pby/: fitfunplot.py  localfiles.py
sparkhalos/: test.py
sparkhalos/hstats/: cic.py  fitfun.py  hmfcalc.py
sparkhalos/simparams/: __init__.py  abacussummit.py  simparams.py  test_rand.py
sparkhalos/simulations/: abacussummit.py  test_rand.py
sparkhalos/simulprocess/: abacussummit.py  test_rand.py  testpp.py
