[tool.poetry]
name = "sparkhalos"
version = "0.1.0"
description = ""
authors = ["albinpjames <mail@albinpjames.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
