[tool.poetry]
name = "sparkhalos"
version = "0.1.0"
description = ""
authors = ["albinpjames <mail@albinpjames.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
scipy = { version = "^1.11.1", python = ">=3.11,<3.13" }
matplotlib = "^3.7.2"
hmf = "^3.4.4"
halotools = "^0.8.2"
gsl = "^0.0.3"
corrfunc = "^2.5.0"
abacusutils = "^1.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pylint = "^2.17.4"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
